private-dormitory/force-app/main/default/objects/Room_Inspection__c/Room_Inspection__c.object-meta.xml
<CustomObject>
    <description>Stores inspection records documenting the condition of a room and its furniture during resident move-in or move-out.</description>
    <label>Room Inspection</label>
    <nameField>
        <label>Room Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Room Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>