private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Room Inspections</relationshipLabel>
    <relationshipName>Room_Inspections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>