private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <label>Flooring</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inspection_Picklist_set</valueSetName>
    </valueSet>
</CustomField>