private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Furniture__c.field-meta.xml
<CustomField>
    <fullName>Furniture__c</fullName>
    <label>Furniture</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Minor Damage</fullName>
            </value>
            <value>
                <fullName>Major Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>