private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move-in</fullName>
            </value>
            <value>
                <fullName>Move-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>