private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Room where the Resident is moving in/out.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Room Inspections</relationshipLabel>
    <relationshipName>Room_Inspections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>