private-dormitory/force-app/main/default/objects/Room_Inspection__c/fields/Windows_Doors__c.field-meta.xml
<CustomField>
    <fullName>Windows_Doors__c</fullName>
    <label>Windows/Doors</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inspection_Picklist_set</valueSetName>
    </valueSet>
</CustomField>