private-dormitory/force-app/main/default/objects/Room_Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Room Inspections</label>
</ListView>